media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        supplementalGroups:
          - 104
      containers:
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin:latest
        securityContext:
          privileged: true
        ports:
        - containerPort: 8096
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - mountPath: /data/media
          name: data
          subPath: media
        - name: dev-dri
          mountPath: /dev/dri
      volumes:
      - name: config
        persistentVolumeClaim: 
          claimName: jellyfin-config
      - name: data
        persistentVolumeClaim: 
          claimName: media-data
      - name: dev-dri
        hostPath:
          path: /dev/dri
