media/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # traefik.ingress.kubernetes.io/router.middlewares: traefik-authentik@kubernetescrd
spec:
  rules:
  - host: jellyfin.michaelthomson.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: jellyfin
            port: 
              name: http
  tls:
    - hosts:
        - jellyfin.michaelthomson.dev
      secretName: letsencrypt-wildcard-cert-michaelthomson.dev
